[project]
name = "landing"
version = "0.1.0"
description = "SiiWay Domains Landing Page"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "wyf9", email = "wyf9@siiway.org" }]
dependencies = [
    "cloudflare-error-page",
    "fastapi[standard]>=0.124.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "uvicorn>=0.38.0",
]

[tool.uv.sources]
cloudflare-error-page = { git = "https://github.com/donlon/cloudflare-error-page.git" }
