[project]
name = "landing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloudflare-error-page",
    "fastapi>=0.136",
    "user-agents>=2.2.0",
]

[dependency-groups]
dev = ["workers-py", "workers-runtime-sdk"]

[tool.uv.sources]
cloudflare-error-page = { git = "https://github.com/donlon/cloudflare-error-page.git" }

[tool.ty.src]
exclude = ["python_modules/"]